added sessionid toast, accessible from action menu overflow. shows 0 currently

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,5 +27,8 @@
     <string name="button_redo">Redo</string>
     <string name="button_leave">Leave</string>
     <string name="type_here">Type here</string>
+    
+    <!-- action bar -->
+    <string name="session_id">Display Session ID</string>
 
 </resources>
